copied node_module deps locally

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			margin-bottom: 20px;
 		}
 	</style>
-	<script type="text/javascript" src="./node_modules/blockstack/dist/blockstack.js"></script>
+	<script type="text/javascript" src="./blockstack/blockstack.js"></script>
 	<script type="module" src="./index.js"></script>
 </head>
 <body>
