--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		}
 	</style>
 	<script type="text/javascript" src="./blockstack/blockstack.js"></script>
+	<script type="text/javascript" src="./geolib/dist/geolib.js"></script>
 	<script type="module" src="./index.js"></script>
 </head>
 <body>
