--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
 <head>
 	<title>My blockstack apps</title>
 	<style type="text/css">
-		input, textarea{
-			font-size: 1rem;
-		}
-		.row{
-			margin-bottom: 20px;
+		app-header, geo-tag{
+			display: block;
 		}
 	</style>
-	<script type="text/javascript" src="./blockstack/blockstack.js"></script>
-	<script type="text/javascript" src="./geolib/dist/geolib.js"></script>
-	<script type="module" src="./index.js"></script>
+	<script type="module" src="./dist/bundle.js"></script>
 </head>
-<body>
+<body style="background: #f7f7f7;">
 </body>
 </html>
