Mobile meta tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My blockstack apps</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Checkin</title>
 	<style type="text/css">
 		app-header, geo-tag{
 			display: block;
