added support to read all checkins

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	</style>
 	<script type="module" src="./dist/bundle.js"></script>
 </head>
-<body style="background: #f7f7f7;">
+<body>
 </body>
 </html>
