started testcase for geo-tag component

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 	</style>
 	<script type="module" src="/dist/bundle.js"></script>
 	<base href="/checkin/" >
+	<script>
+		window.onload = function(){
+			window.setup(document.body);
+		}
+	</script>
 </head>
 <body>
 </body>
