chore: changed dist path

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			display: block;
 		}
 	</style>
-	<script type="module" src="/dist/bundle.js"></script>
+	<script type="module" src="./dist/bundle.js"></script>
 	<base href="/checkin/" >
 	<script>
 		window.onload = function(){
